--- a/examples/examples-browser/views/webcamFaceExpressionRecognition.html
+++ b/examples/examples-browser/views/webcamFaceExpressionRecognition.html
@@ -120,8 +120,7 @@
       <div style="display: none;">
         <input name="neutral_post" id="neutral" type="text" value="">
       </div>  
-        <center style="padding-bottom : 10px;"><a onclick="save()" href="javascript:history.back()"  id="download-button" >Back</a></center>
-        <center><div class="animated infinite pulse"><input type="submit" value="Yes"  onclick ="update_status()"  ></div></center>
+        <center><input type="submit" value="Yes"  onclick ="update_status()"></center>
     </form>
     <div>
     <canvas id="myChart" width="400" height="400"></canvas>
@@ -185,7 +184,9 @@
                     var exp = 'neutral: ' + result[key][expression]
                     // console.log('\n\n', exp)
                     vals.push(result[key][expression])
-                    addData(myChart,expression,result[key][expression])
+                    //console.log(expression)
+                    //console.log(result[key][expression])
+                    //addData(myChart,expression,result[key][expression])
                     
                   }
                   if (count==1){
@@ -205,7 +206,7 @@
         // setTimeout(getResult(),2000)
         window.setInterval(function(){
           getResult(result)
-        }, 5000);
+        }, 50);
         
         // console.log('vals', vals)
         
@@ -216,6 +217,11 @@
 
       setTimeout(() => onPlay())
     }
+    
+    function chart_data_update()
+    	{
+    	addData(myChart,expression,result[key][expression])
+    	}
 
     async function run() {
       // load face detection and face expression recognition models
@@ -233,7 +239,8 @@
     function updateResults() {}
     function update_status()
   		{
-      document.getElementById("status").innerHTML  = "Submitting";
+      //document.getElementById("status").innerHTML  = "Submitting";
+      document.getElementById("neutral").value = vals;
       console.log(document.getElementById("neutral").value)
       }
       
