successful shifting of data and added happy values too

--- a/examples/examples-browser/views/chart.html
+++ b/examples/examples-browser/views/chart.html
@@ -49,7 +49,8 @@
                         beginAtZero: true
                     }
                 }]
-            }
+            },
+            animation: false
         }
     });
 
