--- a/examples/examples-browser/views/webcamFaceExpressionRecognition.html
+++ b/examples/examples-browser/views/webcamFaceExpressionRecognition.html
@@ -12,7 +12,7 @@
   <script src="js/Chart.js"></script>
 </head>
 <body>
-  <!-- <div id="navbar"></div> -->
+  <div id="navbar"></div>
   <div class="center-content page-container">
 
     <div class="progress" id="loader">
@@ -169,7 +169,7 @@
     
 
     $(document).ready(function() {
-      // renderNavBar('#navbar', 'webcam_face_expression_recognition')
+      renderNavBar('#navbar', 'webcam_face_expression_recognition')
       initFaceDetectionControls()
       run()
     })
