--- a/examples/examples-browser/views/chart.html
+++ b/examples/examples-browser/views/chart.html
@@ -5,15 +5,42 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-        <script src="js/Chart.js"></script>
+        <script src="js/script.js"></script>
       </head>
 <body>
     <div id="navbar"></div>
-    <div class="center-content page-container">
+    <!-- <div class="center-content page-container">
         <canvas id="myChart" width="400" height="400"></canvas>
-    </div>
+    </div> -->
+    <div>
+        <h1>Web Speech Synthesis Demo</h1>
+        
+        <p id="msg"></p>
     
+        <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
+    
+        <div class="option">
+            <label for="voice">Voice</label>
+            <select name="voice" id="voice"></select>
+        </div>
+        <div class="option">
+            <label for="volume">Volume</label>
+            <input type="range" min="0" max="1" step="0.1" name="volume" id="volume" value="1">
+        </div>
+        <div class="option">
+            <label for="rate">Rate</label>
+            <input type="range" min="0.1" max="10" step="0.1" name="rate" id="rate" value="1">
+        </div>
+        <div class="option">
+            <label for="pitch">Pitch</label>
+            <input type="range" min="0" max="2" step="0.1" name="pitch" id="pitch" value="1">
+        </div>
+    
+        <button id="speak">Speak</button>
+    
+    </div>
 </body>
+    
     <script>
     var ctx = document.getElementById('myChart');
     var myChart = new Chart(ctx, {
