--- a/examples/examples-browser/views/chart.html
+++ b/examples/examples-browser/views/chart.html
@@ -1,90 +1,46 @@
-<html>
+
+
+<!DOCTYPE html>
+<html lang="en" >
     <head>
-        <script src="js/commons.js"></script>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-        <script src="js/script.js"></script>
-      </head>
-<body>
-    <div id="navbar"></div>
-    <!-- <div class="center-content page-container">
-        <canvas id="myChart" width="400" height="400"></canvas>
-    </div> -->
-    <div>
-        <h1>Web Speech Synthesis Demo</h1>
-        
-        <p id="msg"></p>
-    
-        <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
-    
-        <div class="option">
-            <label for="voice">Voice</label>
-            <select name="voice" id="voice"></select>
-        </div>
-        <div class="option">
-            <label for="volume">Volume</label>
-            <input type="range" min="0" max="1" step="0.1" name="volume" id="volume" value="1">
-        </div>
-        <div class="option">
-            <label for="rate">Rate</label>
-            <input type="range" min="0.1" max="10" step="0.1" name="rate" id="rate" value="1">
-        </div>
-        <div class="option">
-            <label for="pitch">Pitch</label>
-            <input type="range" min="0" max="2" step="0.1" name="pitch" id="pitch" value="1">
-        </div>
-    
-        <button id="speak">Speak</button>
-    
-    </div>
-</body>
-    
-    <script>
-    var ctx = document.getElementById('myChart');
-    var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-            datasets: [{
-                label: 'expression',
-                data: [12, 19, 3, 5, 2, 3],
-                backgroundColor: [
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(255, 206, 86, 0.2)',
-                    'rgba(75, 192, 192, 0.2)',
-                    'rgba(153, 102, 255, 0.2)',
-                    'rgba(255, 159, 64, 0.2)'
-                ],
-                borderColor: [
-                    'rgba(255, 99, 132, 1)',
-                    'rgba(54, 162, 235, 1)',
-                    'rgba(255, 206, 86, 1)',
-                    'rgba(75, 192, 192, 1)',
-                    'rgba(153, 102, 255, 1)',
-                    'rgba(255, 159, 64, 1)'
-                ],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero: true
-                    }
-                }]
-            },
-            animation: false
-        }
-    });
+    <meta charset="UTF-8">
+    <title>CodePen - Web Speech Synthesis Demo</title>
+    <!-- <link rel="stylesheet" href="./style.css"> -->
+    <!-- <script src="../public/js/commons.js"></script> -->
+   
+    <!-- <script src="../public/js/script.js"></script> -->
+    </head>
 
-    $(document).ready(function() {
-      renderNavBar('#navbar', 'chart')
-    })
+    <!-- partial:index.partial.html -->
+<div id="page-wrapper">
+    <h1>Web Speech Synthesis Demo</h1>
+    
+    <p id="msg"></p>
+  
+    <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
+  
+      <div class="option">
+          <label for="voice">Voice</label>
+          <select name="voice" id="voice"></select>
+      </div>
+      <div class="option">
+          <label for="volume">Volume</label>
+          <input type="range" min="0" max="1" step="0.1" name="volume" id="volume" value="1">
+      </div>
+      <div class="option">
+          <label for="rate">Rate</label>
+          <input type="range" min="0.1" max="10" step="0.1" name="rate" id="rate" value="1">
+      </div>
+      <div class="option">
+          <label for="pitch">Pitch</label>
+          <input type="range" min="0" max="2" step="0.1" name="pitch" id="pitch" value="1">
+      </div>
+  
+      <button id="speak">Speak</button>
+  
+  </div>
 
-    </script>
-
-</html>
+    <script  src="/js/script.js"></script>
+      
+      </html>
+      
