--- a/examples/examples-browser/views/index.html
+++ b/examples/examples-browser/views/index.html
@@ -6,14 +6,55 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
+
+
+
+
 <body>
 <!-- partial:index.partial.html -->
 <button>START LISTENING</button>
 <h1></h1>
+
+
+
+<!-- partial:index.partial.html -->
+<div id="page-wrapper">
+  <h1>Web Speech Synthesis Demo</h1>
+  
+  <p id="msg"></p>
+
+  <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
+
+    <div class="option">
+        <label for="voice">Voice</label>
+        <select name="voice" id="voice"></select>
+    </div>
+    <div class="option">
+        <label for="volume">Volume</label>
+        <input type="range" min="0" max="1" step="0.1" name="volume" id="volume" value="1">
+    </div>
+    <div class="option">
+        <label for="rate">Rate</label>
+        <input type="range" min="0.1" max="10" step="0.1" name="rate" id="rate" value="1">
+    </div>
+    <div class="option">
+        <label for="pitch">Pitch</label>
+        <input type="range" min="0" max="2" step="0.1" name="pitch" id="pitch" value="1">
+    </div>
+
+    <button id="speak">Speak</button>
+
+</div>
+
+
+
+
+
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js'></script><script  src="js/speechRecognition.js"></script>
 <script  src="js/bundle.js"></script>
+<script  src="/js/script.js"></script>
 
 </body>
 </html>
